src_old/objects/ProjectServiceQuestionDefinedResponse__c.object
<CustomObject>
    <description>Relates a Service Question Defined Response to a Project Service Question. Project Service Question Def Response is related to Project Service Question, Question, Question Defined Response, and Question Defined Repsonse Variant.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefinedResponseOrder__c</fullName>
        <formula>QuestionDefinedResponse__r.DefinedResponseOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defined Response Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefinedResponseTextVariant__c</fullName>
        <formula>IF(OR(ISNULL(QuestionDefinedResponseVariant__c),QuestionDefinedResponseVariant__c = &apos;&apos;), QuestionDefinedResponse__r.DefinedResponseText__c, QuestionDefinedResponseVariant__r.DefinedResponseText__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defined Response Text Variant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefinedResponseText__c</fullName>
        <formula>IF
( 
  Target__c !=null, 
  Target__r.Name,
  QuestionDefinedResponse__r.DefinedResponseText__c
)</formula>
        <label>Defined Response Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndofQuestions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End of Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JumpToAction__c</fullName>
        <label>JumpTo Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUESTION</fullName>
                </value>
                <value>
                    <fullName>CONTINUE</fullName>
                </value>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>ENDOFSURVEY</fullName>
                    <isActive>false</isActive>
                    <label>ENDOFSURVEY</label>
                </value>
                <value>
                    <fullName>NEXTTARGET</fullName>
                    <isActive>false</isActive>
                    <label>NEXTTARGET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JumpToQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jump To Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Project_Service_Question_Def_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OHId__c</fullName>
        <formula>IF(UPPER(ProjectServiceQuestion__r.ProjectService__r.ServiceTemplateVersion__c) == &apos;V2&apos;, Name, Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectServiceQuestion__c</fullName>
        <label>Project Service Question</label>
        <referenceTo>ProjectServiceQuestion__c</referenceTo>
        <relationshipName>ProjectServiceQuestionDefResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionDefinedResponseVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Defined Response Variant</label>
        <referenceTo>QuestionDefinedResponseVariant__c</referenceTo>
        <relationshipName>Project_Service_Question_Def_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionDefinedResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Defined Response</label>
        <referenceTo>QuestionDefinedResponse__c</referenceTo>
        <relationshipName>Project_Service_Question_Def_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionExceptionCode__c</fullName>
        <formula>QuestionDefinedResponse__r.Exception__r.ExceptionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Exception Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>ProjectServiceQuestion__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseCount__c</fullName>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Project Service Question Def Responses</relationshipLabel>
        <relationshipName>ProjServQnDefResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Service Question Def Response</label>
    <nameField>
        <displayFormat>PSQDR-{00000000}</displayFormat>
        <label>Project Service Question  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Question Def Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Project_Status_check_on_save</fullName>
        <active>true</active>
        <description>Don&apos;t allow to inactive a defined response when the project is &quot;In Progress&quot;</description>
        <errorConditionFormula>AND (ISCHANGED(Active__c ),Active__c == false,  ProjectServiceQuestion__r.ProjectService__r.ProjectStatus__c ==&apos;In Progress&apos; )</errorConditionFormula>
        <errorMessage>Defined response cannot be edited when project is In Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_2_active_defined_responses</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED(Active__c ),Active__c == false, ProjectServiceQuestion__r.DefinedResponseCount__c &lt;= 2 )</errorConditionFormula>
        <errorMessage>There should be at least two (2) active Defined Responses for this question.</errorMessage>
    </validationRules>
</CustomObject>